--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -74,16 +74,20 @@
     		<h2>
     			<span class="font-en">CHECK</span><br>記録を見る
     		</h2>
+    		
+    		<th:block th:if="${weightCheckIdOver1 == null && weightCheckIdOver2 == null && imgList.size <= 0}">
+	    		<p>記録はありません。</p>
+    		</th:block>
     
     		<!-- 	表グラフ -->
-    		<p>体重表示</p>
     		<!-- 	体重・BMI表示 -->
-    		<th:block th:if="${weightCheckIdOver1 == null}">
-    			<p>記録はまだありません。</p>
-    		</th:block>
+<!--     		<th:block th:if="${weightCheckIdOver1 == null}"> -->
+<!--     			<p>記録はまだありません。</p> -->
+<!--     		</th:block> -->
     
     		<th:block th:if="${weightCheckIdOver1 != null}"
     			th:object="${weightBmi}">
+    			<p>体重表示</p>
     			<table border="1">
     				<tr>
     					<th>日付</th>
@@ -109,9 +113,9 @@
     
     
     		<!-- 	体重グラフ -->
-    		<th:block th:if="${weightCheckIdOver2 == null}">
-    			<p>記録数が2日以上でグラフ表示します。</p>
-    		</th:block>
+<!--     		<th:block th:if="${weightCheckIdOver2 == null}"> -->
+<!--     			<p>記録数が2日以上でグラフ表示します。</p> -->
+<!--     		</th:block> -->
     		<th:block th:if="${weightCheckIdOver2 != null}"
     			th:object="${weightBmi}">
     			<div class="area">
@@ -119,11 +123,11 @@
     			</div>
     		</th:block>
     
-    		<p>前回のトレーニング記録</p>
-    		<th:block th:if="${machineSetCountCheckIdOver1 == null}">
-    			<p>記録はまだありません。</p>
-    		</th:block>
+<!--     		<th:block th:if="${machineSetCountCheckIdOver1 == null}"> -->
+<!--     			<p>記録はまだありません。</p> -->
+<!--     		</th:block> -->
     		<th:block th:if="${machineSetCountCheckIdOver1 != null}">
+    		<p>前回のトレーニング記録</p>
     			<table border="1">
     				<tr th:each="machineSetCount : ${beforeCount}">
     					<th:block th:if="${machineSetCount != null}">
@@ -151,12 +155,14 @@
     
     
     		<!-- カレンダー -->
-    		<div class="pictureDate"></div>
-    		<form action="show" th:object="${calendar}">
-    			<input type="hidden" value="" name="calendarDate" id="calendarDate" />
-    			<input type="submit" value="カレンダーの詳細を見る" />
-    		</form>
-    
+    		<div th:if="${imgList.size > 0}">
+	    		<div class="pictureDate"></div>
+	    		<form action="show" th:object="${calendar}">
+	    			<input type="hidden" value="" name="calendarDate" id="calendarDate" />
+	    			<input type="submit" value="カレンダーの詳細を見る" />
+	    		</form>
+    		</th:block>
+    		
     		<!-- 画像一覧 -->
     		<h3>All View</h3>
     
