--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -156,55 +156,55 @@
     
     
     		<!-- カレンダー -->
-    		<div class="pictureDate"></div>
-    		<form action="show" th:object="${calendar}">
-    			<input type="hidden" value="" name="calendarDate" id="calendarDate" />
-    			<p><small>※日付をクリックしてからボタンを押してください</small></p>
-    			<input type="submit" value="カレンダーの詳細を見る" />
-    		</form>
-    	
-    		
-    	<div th:if="${imgList.size > 0}">
-    		<!-- 画像一覧 -->
-    		<h3>All View</h3>
-    
-    		<th:block th:each="image : ${imgList}">
-    			<a
-    				th:href="@{/show/{date}(date=${#dates.format(image.date,'yyyy-MM-dd')})}">
-    				<img th:src="@{/uploads/{name}(name=${image.imgName})}" alt="" />
-    			</a>
-    			<p th:text="${#dates.format(image.date,'yyyy年MM月dd日')}"></p>
+    		<th:block th:if="${weightCheckIdOver1 != null || weightCheckIdOver2 != null || imgList.size > 0}">
+	    		<div class="pictureDate"></div>
+	    		<form action="show" th:object="${calendar}">
+	    			<input type="hidden" value="" name="calendarDate" id="calendarDate" />
+	    			<p><small>※日付をクリックしてからボタンを押してください</small></p>
+	    			<input type="submit" value="カレンダーの詳細を見る" />
+	    		</form>
     		</th:block>
-    
-    		<!-- ページネーション、ページャー -->
-    		<div th:if="${totalPage >= 2}">
-    			<ul>
-    				<!-- 前のページリンク -->
-    				<th:block th:switch="${page}">
-    					<li th:case="1"><a href="" class="noevent">Prev</a></li>
-    					<li th:case="*"><a th:href="@{/mypage(page=${page-1})}">Prev</a></li>
-    				</th:block>
-    				<!-- ページ番号 -->
-    				<th:block th:each="index:${#numbers.sequence(1,totalPage)}">
-    					<th:block th:switch="${index}">
-    						<li th:case="${page}"><a href="" class="noevent">[[${index}]]</a></li>
-    						<li th:case="*"><a th:href="@{/mypage(page=${index})}">[[${index}]]</a></li>
-    					</th:block>
-    				</th:block>
-    				<!-- 次のページリンク -->
-    				<th:block th:switch="${page}">
-    					<li th:case="${totalPage}"><a href="" class="noevent">Next</a></li>
-    					<li th:case="*"><a th:href="@{/mypage(page=${page+1})}">Next</a></li>
-    				</th:block>
-    			</ul>
+    		
+    		<div th:if="${imgList.size > 0}">
+	    		<!-- 画像一覧 -->
+	    		<h3>All View</h3>
+	    
+	    		<th:block th:each="image : ${imgList}">
+	    			<a
+	    				th:href="@{/show/{date}(date=${#dates.format(image.date,'yyyy-MM-dd')})}">
+	    				<img th:src="@{/uploads/{name}(name=${image.imgName})}" alt="" />
+	    			</a>
+	    			<p th:text="${#dates.format(image.date,'yyyy年MM月dd日')}"></p>
+	    		</th:block>
+	    
+	    		<!-- ページネーション、ページャー -->
+	    		<div th:if="${totalPage >= 2}">
+	    			<ul>
+	    				<!-- 前のページリンク -->
+	    				<th:block th:switch="${page}">
+	    					<li th:case="1"><a href="" class="noevent">Prev</a></li>
+	    					<li th:case="*"><a th:href="@{/mypage(page=${page-1})}">Prev</a></li>
+	    				</th:block>
+	    				<!-- ページ番号 -->
+	    				<th:block th:each="index:${#numbers.sequence(1,totalPage)}">
+	    					<th:block th:switch="${index}">
+	    						<li th:case="${page}"><a href="" class="noevent">[[${index}]]</a></li>
+	    						<li th:case="*"><a th:href="@{/mypage(page=${index})}">[[${index}]]</a></li>
+	    					</th:block>
+	    				</th:block>
+	    				<!-- 次のページリンク -->
+	    				<th:block th:switch="${page}">
+	    					<li th:case="${totalPage}"><a href="" class="noevent">Next</a></li>
+	    					<li th:case="*"><a th:href="@{/mypage(page=${page+1})}">Next</a></li>
+	    				</th:block>
+	    			</ul>
+	    		</div>
     		</div>
     
-    
     		<!-- 画像比較 -->
-    		<h3>Comparison</h3>
-    
     		<div th:if="${imgList.size > 0}">
     			<p>写真が登録されていません</p>
+    			<h3>Comparison</h3>
         		<!-- 一番古い日付でuploadした画像を表示 -->
         		<img th:src="@{/uploads/{name}(name=${oldestImage.imgName})}" alt="Before" >
         		<p>Before</p>
