--- a/src/main/resources/templates/record.html
+++ b/src/main/resources/templates/record.html
@@ -10,68 +10,79 @@
 	href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.7/dist/css/splide.min.css">
 <link rel="stylesheet" th:href="@{/css/common.css}">
 <link rel="stylesheet" th:href="@{/css/reset.css}">
+<link rel="stylesheet" th:href="@{/css/user.css}">
 </head>
 <body>
+	<header>
+		<div class="inner">
+			<h1>
+				<a th:href="@{/ }" class="logo"><img
+					th:src="@{/images/ttl_logo.png}"></a>
+			</h1>
+			<nav class="navigation">
+				<ul role='list'>
+					<li><a th:href="@{/mypage}">マイページ</a></li>
+					<li><a th:href="@{/user/logout}">ログアウト</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+	<main>
+		<div class="inner">
+			<h2>
+				<span class="font-en">Record Training</span><br>トレーニング内容を記録する
+			</h2>
 
-	<h1>トレーニング内容を記録する</h1>
+			<form action="" method="post" th:object="${machineSetCount}">
 
-	<form action="" method="post" th:object="${machineSetCount}">
+				<!-- ユーザーID： -->
+				<input type="hidden" th:field="*{userId}" />
 
-<!-- ユーザーID： -->
-		<input type="hidden" th:field="*{userId}" />
+				<p>
+					日付： <input type="date" th:field="*{date}" />
+				</p>
 
-		<p>日付：
-			<input type="date" th:field="*{date}" />
-		</p>
+				<p>
+					筋トレマシン名： <select th:field="*{machineId}">
+						<option th:each="machine : ${machine}"
+							th:value="${machine.machineId}">
+							[[${machine.machineName}]]</option>
+					</select>
+				</p>
 
-		<p>筋トレマシン名：
-			<select th:field="*{machineId}" >
-				<option th:each="machine : ${machine}" th:value="${machine.machineId}">
-					[[${machine.machineName}]]
-				</option>
-			</select>
-		</p>
+				<p>
+					重量： <select th:field="*{machineWeight}">
+						<option th:each="i : ${#numbers.sequence(1, weight)}"
+							th:value="${i}">[[${i}]]</option>
+					</select> kg
+				</p>
 
-		<p>重量：
-			<select th:field="*{machineWeight}">
-				<option th:each="i : ${#numbers.sequence(1, weight)}" th:value="${i}">
-					[[${i}]]
-				</option>
-			</select>
-			kg
-		</p>
+				<!-- 時間があったら・・・input要素とdatalist要素で「テキスト入力」と「入力候補からの選択」の両方が可能なフォームを作成 -->
+				<p>
+					1セットあたりの回数： <select th:field="*{machineCount}">
+						<!-- #numbers.sequence　繰り返しの最初の数と最後の数を記載 -->
+						<option th:each="i : ${#numbers.sequence(1, numCount)}"
+							th:value="${i}">[[${i}]]</option>
+					</select> 回
+				</p>
 
-<!-- 時間があったら・・・input要素とdatalist要素で「テキスト入力」と「入力候補からの選択」の両方が可能なフォームを作成 -->
-		<p>1セットあたりの回数：
-			<select th:field="*{machineCount}">
-<!-- #numbers.sequence　繰り返しの最初の数と最後の数を記載 -->
-				<option th:each="i : ${#numbers.sequence(1, numCount)}" th:value="${i}">
-					[[${i}]]
-				</option>
-			</select>
-			回
-		</p>
+				<p>
+					セット数： <select th:field="*{sets}">
+						<th:block th:each="i : ${#numbers.sequence(1, numSet)}"
+							th:value="${i}">
+							<option th:value="${i}">[[${i}]]</option>
+						</th:block>
+					</select> セット
+				</p>
 
-		<p>セット数：
-			<select th:field="*{sets}">
-				<th:block  th:each="i : ${#numbers.sequence(1, numSet)}" th:value="${i}">
-					<option th:value="${i}">
-						[[${i}]]
-					</option>
-				</th:block>
-			</select>
-			セット
-		</p>
-		
-		<p><input type="submit" th:value="記録する" /></p>	
-	
-	</form>
-	
-	<p>
-		<a th:href="@{/mypage}">My Pageへ</a>
-	</p>
-	
-<footer>
+				<p>
+					<input type="submit" th:value="記録する" />
+				</p>
+
+			</form>
+		</div>
+	</main>
+	<footer>
 		<small>Copyright 2024 TRECORD</small>
 	</footer>
 
