--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -32,3 +32,17 @@
     font-size: 3rem;
     margin-right: 1rem;
 }
+.setting {
+    padding: 0 5rem;
+    border: 1px solid #333;
+    border-radius: 30px;
+    line-height: 2;
+}
+
+section {
+	padding: 50px 0;
+}
+
+.record {
+	background: aliceblue;
+}
