--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -28,191 +28,169 @@
     		<h2>
     			<span class="font-en">MY PAGE</span><br>マイページ
     		</h2>
-    
     		<!-- ログインIDとアイコンを表示 -->
     		<div class="info">
                 <div class="user">
                     <div class="user_icon">
-              			<img th:if="${session.user.fileName != null}" th:src="@{/uploads/{name}(name=${session.user.fileName})}" alt="" />
+              			<img th:if="${session.user.fileName != null}" th:src="@{/uploads/{name}(name=${session.user.fileName})}" />
               			<img th:if="${session.user.fileName == null}" th:src="@{/images/macho_cat.png}" alt="Default Image" />
                     </div>
           			<p><span class="user_name" th:text="${session.user.loginId}"></span>さん</p>
                 </div>
         		<a class="setting" th:href="@{/user/setting/{id}(id=${session.user.userId})}">設定</a>
     		</div>
-    
-    		<!-- 記録する		 -->
-    		<h2>
-    			<span class="font-en">RECORD</span><br>記録をする
-    		</h2>
-    
-    		<div class="support-menu">
-    			<a th:href="@{/gacha(gachaType='count')}"
-    				class="support-menu_btn count">
-    				<p>
-    					<span>回数</span><br>ガチャを回す
-    				</p>
-    			</a> <a th:href="@{/gacha(gachaType='weight')}"
-    				class="support-menu_btn weight">
-    				<p>
-    					<span>重量</span><br>ガチャを回す
-    				</p>
-    			</a>
-    		</div>
-    		<div class="support-menu">
-    			<a th:href="@{/bodyCondition}" class="support-menu_btn">
-    				<p>
-    					<span>カラダ</span><br>を記録
-    				</p>
-    			</a> <a th:href="@{/record}" class="support-menu_btn">
-    				<p>
-    					<span>トレーニング</span><br>を記録
-    				</p>
-    			</a>
-    		</div>
-    		<!-- 記録を表示 -->
-    		<h2>
-    			<span class="font-en">CHECK</span><br>記録を見る
-    		</h2>
-    		
-    		<th:block th:if="${weightCheckIdOver1 == null && weightCheckIdOver2 == null && imgList.size <= 0}">
-	    		<p>記録はありません。</p>
-    		</th:block>
-    		
-    
-    		<!-- 	表グラフ -->
-    		<!-- 	体重・BMI表示 -->
-<!--     		<th:block th:if="${weightCheckIdOver1 == null}"> -->
-<!--     			<p>記録はまだありません。</p> -->
-<!--     		</th:block> -->
-    
-    		<th:block th:if="${weightCheckIdOver1 != null}"
-    			th:object="${weightBmi}">
-    			<p>体重表示</p>
-    			<table border="1">
-    				<tr>
-    					<th>日付</th>
-    					<td>[[*{date}]]</td>
-    				</tr>
-    				<tr>
-    					<th>体重</th>
-    					<td>[[*{userWeight}]]</td>
-    				</tr>
-    				<tr>
-    					<th>BMI</th>
-    					<td>[[*{bmi}]]</td>
-    				</tr>
-    				<tr>
-    					<th>適正体重</th>
-    					<td>[[*{healthyWeight}]]</td>
-    				</tr>
-    			</table>
-    		</th:block>
-    
-    
-    
-    
-    
-    		<!-- 	体重グラフ -->
-<!--     		<th:block th:if="${weightCheckIdOver2 == null}"> -->
-<!--     			<p>記録数が2日以上でグラフ表示します。</p> -->
-<!--     		</th:block> -->
-    		<th:block th:if="${weightCheckIdOver2 != null}"
-    			th:object="${weightBmi}">
-    			<div class="area">
-    				<canvas id="weightBmiChart"></canvas>
-    			</div>
-    		</th:block>
-    
-<!--     		<th:block th:if="${machineSetCountCheckIdOver1 == null}"> -->
-<!--     			<p>記録はまだありません。</p> -->
-<!--     		</th:block> -->
-    		<th:block th:if="${machineSetCountCheckIdOver1 != null}">
-    		<p>前回のトレーニング記録</p>
-    			<table border="1">
-    				<tr th:each="machineSetCount : ${beforeCount}">
-    					<th:block th:if="${machineSetCount != null}">
-    						<th>[[${machineSetCount.machineName}]]</th>
-    						<td>[[${machineSetCount.machineWeight}]]kg</td>
-    						<td>[[${machineSetCount.machineCount}]]回</td>
-    						<td>[[${machineSetCount.sets}]]セット</td>
-    					</th:block>
-    				</tr>
-    			</table>
-    		</th:block>
-    
-    		<th:block th:if="${machineSetCountCheckIdOver1 != null}">
-    			<!-- 	マシーングラフ（線） -->
-    			<div class="area">
-    				<canvas id="machineSetCountLineGraph"></canvas>
-    			</div>
-    
-    
-    			<!-- 	マシーングラフ（丸） -->
-    			<div class="area">
-    				<canvas id="machineSetCountPieGraph"></canvas>
-    			</div>
-    		</th:block>
-    
-    
-    		<!-- カレンダー -->
-    		<th:block th:if="${weightCheckIdOver1 != null || weightCheckIdOver2 != null || imgList.size > 0}">
-	    		<div class="pictureDate"></div>
-	    		<form action="show" th:object="${calendar}">
-	    			<input type="hidden" value="" name="calendarDate" id="calendarDate" />
-	    			<p><small>※日付をクリックしてからボタンを押してください</small></p>
-	    			<input type="submit" value="カレンダーの詳細を見る" />
-	    		</form>
-    		</th:block>
-    		
-    		<div th:if="${imgList.size > 0}">
-	    		<!-- 画像一覧 -->
-	    		<h3>All View</h3>
-	    
-	    		<th:block th:each="image : ${imgList}">
-	    			<a
-	    				th:href="@{/show/{date}(date=${#dates.format(image.date,'yyyy-MM-dd')})}">
-	    				<img th:src="@{/uploads/{name}(name=${image.imgName})}" alt="" />
-	    			</a>
-	    			<p th:text="${#dates.format(image.date,'yyyy年MM月dd日')}"></p>
-	    		</th:block>
-	    
-	    		<!-- ページネーション、ページャー -->
-	    		<div th:if="${totalPage >= 2}">
-	    			<ul>
-	    				<!-- 前のページリンク -->
-	    				<th:block th:switch="${page}">
-	    					<li th:case="1"><a href="" class="noevent">Prev</a></li>
-	    					<li th:case="*"><a th:href="@{/mypage(page=${page-1})}">Prev</a></li>
-	    				</th:block>
-	    				<!-- ページ番号 -->
-	    				<th:block th:each="index:${#numbers.sequence(1,totalPage)}">
-	    					<th:block th:switch="${index}">
-	    						<li th:case="${page}"><a href="" class="noevent">[[${index}]]</a></li>
-	    						<li th:case="*"><a th:href="@{/mypage(page=${index})}">[[${index}]]</a></li>
-	    					</th:block>
-	    				</th:block>
-	    				<!-- 次のページリンク -->
-	    				<th:block th:switch="${page}">
-	    					<li th:case="${totalPage}"><a href="" class="noevent">Next</a></li>
-	    					<li th:case="*"><a th:href="@{/mypage(page=${page+1})}">Next</a></li>
-	    				</th:block>
-	    			</ul>
-	    		</div>
-    		</div>
-    
-    		<!-- 画像比較 -->
-    		<div th:if="${imgList.size > 0}">
-    			<p>写真が登録されていません</p>
-    			<h3>Comparison</h3>
-        		<!-- 一番古い日付でuploadした画像を表示 -->
-        		<img th:src="@{/uploads/{name}(name=${oldestImage.imgName})}" alt="Before" >
-        		<p>Before</p>
-        		<!-- 一番新しい日付でuploadした画像を表示 -->
-        		<img th:src="@{/uploads/{name}(name=${newestImage.imgName})}" alt="New Body" >
-        		<p>New Body</p>
-      		</div>	 
-
+        
+            <section class="training-suport">
+                <h2>
+                    <span class="font-en">Training Support</span><br>トレーニングサポートコンテンツ
+                </h2>
+        		<div class="support-menu">
+        			<a th:href="@{/gacha(gachaType='count')}" class="support-menu_btn count">
+        				<p><span>回数</span><br>ガチャを回す</p>
+        			</a>
+                    <a th:href="@{/gacha(gachaType='weight')}" class="support-menu_btn weight">
+        				<p><span>重量</span><br>ガチャを回す</p>
+        			</a>
+        		</div>
+            </section>
+            <section class="record">
+        		<h2>
+        			<span class="font-en">RECORD</span><br>記録をする
+        		</h2>
+        		<div class="support-menu">
+        			<a th:href="@{/bodyCondition}" class="support-menu_btn">
+        				<p><span>カラダ</span><br>を記録</p>
+        			</a>
+                    <a th:href="@{/record}" class="support-menu_btn">
+        				<p><span>トレーニング</span><br>を記録</p>
+        			</a>
+        		</div>
+            </section>
+            <section class="check">
+        		<h2>
+        			<span class="font-en">CHECK</span><br>記録を見る
+        		</h2>
+        		<th:block th:if="${weightCheckIdOver1 == null} and ${machineSetCountCheckIdOver1 == null}">
+        			<p>記録はまだありません。</p>
+        		</th:block>
+            
+        		<!-- 	体重・BMI表示 -->
+        		<th:block th:if="${weightCheckIdOver1 != null}"
+        			th:object="${weightBmi}">
+        			<table border="1">
+        				<tr>
+        					<th>日付</th>
+        					<td>[[*{date}]]</td>
+        				</tr>
+        				<tr>
+        					<th>体重</th>
+        					<td>[[*{userWeight}]]</td>
+        				</tr>
+        				<tr>
+        					<th>BMI</th>
+        					<td>[[*{bmi}]]</td>
+        				</tr>
+        				<tr>
+        					<th>適正体重</th>
+        					<td>[[*{healthyWeight}]]</td>
+        				</tr>
+        			</table>
+        		</th:block>
+        
+        		<!-- 	体重グラフ -->
+        		<th:block th:if="${weightCheckIdOver2 == null}">
+        			<p>記録数が2日以上でグラフ表示します。</p>
+        		</th:block>
+        		<th:block th:if="${weightCheckIdOver2 != null}"
+        			th:object="${weightBmi}">
+        			<div class="area">
+        				<canvas id="weightBmiChart"></canvas>
+        			</div>
+        		</th:block>
+        
+        		<p>前回のトレーニング記録</p>
+        		<th:block th:if="${machineSetCountCheckIdOver1 == null}">
+        			<p>記録はまだありません。</p>
+        		</th:block>
+        		<th:block th:if="${machineSetCountCheckIdOver1 != null}">
+        			<table border="1">
+        				<tr th:each="machineSetCount : ${beforeCount}">
+        					<th:block th:if="${machineSetCount != null}">
+        						<th>[[${machineSetCount.machineName}]]</th>
+        						<td>[[${machineSetCount.machineWeight}]]kg</td>
+        						<td>[[${machineSetCount.machineCount}]]回</td>
+        						<td>[[${machineSetCount.sets}]]セット</td>
+        					</th:block>
+        				</tr>
+        			</table>
+        		</th:block>
+        
+        		<th:block th:if="${machineSetCountCheckIdOver2 != null}">
+        			<!-- 	マシーングラフ（線） -->
+        			<div class="area">
+        				<canvas id="machineSetCountLineGraph"></canvas>
+        			</div>
+        
+        			<!-- 	マシーングラフ（丸） -->
+        			<div class="area">
+        				<canvas id="machineSetCountPieGraph"></canvas>
+        			</div>
+        		</th:block>
+        
+        		<!-- カレンダー -->
+        		<div class="pictureDate"></div>
+        		<form action="show" th:object="${calendar}">
+        			<input type="hidden" value="" name="calendarDate" id="calendarDate" />
+        			<input type="submit" value="カレンダーの詳細を見る" />
+        		</form>
+        
+        		<!-- 画像一覧 -->
+        		<h3>All View</h3>
+        
+        		<th:block th:each="image : ${imgList}">
+        			<a th:href="@{/show/{date}(date=${#dates.format(image.date,'yyyy-MM-dd')})}">
+        				<img th:src="@{/uploads/{name}(name=${image.imgName})}" alt="" />
+        			</a>
+        			<p th:text="${#dates.format(image.date,'yyyy年MM月dd日')}"></p>
+        		</th:block>
+        
+        		<!-- ページネーション、ページャー -->
+        		<div th:if="${totalPage >= 2}">
+        			<ul>
+        				<!-- 前のページリンク -->
+        				<th:block th:switch="${page}">
+        					<li th:case="1"><a href="" class="noevent">Prev</a></li>
+        					<li th:case="*"><a th:href="@{/mypage(page=${page-1})}">Prev</a></li>
+        				</th:block>
+        				<!-- ページ番号 -->
+        				<th:block th:each="index:${#numbers.sequence(1,totalPage)}">
+        					<th:block th:switch="${index}">
+        						<li th:case="${page}"><a href="" class="noevent">[[${index}]]</a></li>
+        						<li th:case="*"><a th:href="@{/mypage(page=${index})}">[[${index}]]</a></li>
+        					</th:block>
+        				</th:block>
+        				<!-- 次のページリンク -->
+        				<th:block th:switch="${page}">
+        					<li th:case="${totalPage}"><a href="" class="noevent">Next</a></li>
+        					<li th:case="*"><a th:href="@{/mypage(page=${page+1})}">Next</a></li>
+        				</th:block>
+        			</ul>
+        		</div>
+        
+        
+        		<!-- 画像比較 -->
+        		<h3>Comparison</h3>
+        
+        		<div th:if="${imgList.size > 0}">
+        			<p>写真が登録されていません</p>
+            		<!-- 一番古い日付でuploadした画像を表示 -->
+            		<img th:src="@{/uploads/{name}(name=${oldestImage.imgName})}" alt="Before" >
+            		<p>Before</p>
+            		<!-- 一番新しい日付でuploadした画像を表示 -->
+            		<img th:src="@{/uploads/{name}(name=${newestImage.imgName})}" alt="New Body" >
+            		<p>New Body</p>
+          		</div>
+            </section>
         </div>
 	</main>
 	<footer>
