--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -147,10 +147,10 @@
         		<h3>All View</h3>
         
         		<th:block th:each="image : ${imgList}">
-        			<a th:href="@{/show/{date}(date=${#dates.format(image.date,'yyyy-MM-dd')})}">
+        			<a th:href="@{/show/{date}(date=${#temporals.format(image.date,'yyyy-MM-dd')})}">
         				<img th:src="@{/uploads/{name}(name=${image.imgName})}" alt="" />
         			</a>
-        			<p th:text="${#dates.format(image.date,'yyyy年MM月dd日')}"></p>
+        			<p th:text="${#temporals.format(image.date,'yyyy年MM月dd日')}"></p>
         		</th:block>
         
         		<!-- ページネーション、ページャー -->
